--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -2,6 +2,9 @@
 owner: sysmike # Your GitHub organization or username, where this repository lives
 repo: upptime # The name of this repository
 
+assignees:
+  - sysmike
+
 sites:
   - name: Backup MX
     url: $BACKUPMX
